# mlx-embeddings-server

./: .gitignore  README.md  pyproject.toml
examples/: colqwen2.5.py  colqwen2.5_qdrant.py
mlx_embeddings_server/: backend.py  main.py  schemas.py
scripts/: qdrant-docker.sh
tests/: conftest.py  test_api.py  test_colqwen2_5_qdrant.py  test_concurrency.py  test_siglip.py
